--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Skyler Kaufman <skylerkaufman@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.2"
-gps3 = "0.33.3"
+gps = "3.19"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
