--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = ["Skyler Kaufman <skylerkaufman@gmail.com>"]
 python = "^3.9"
 requests = "^2.2"
 gps = "3.19"
+opencv-python = "^4.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
