--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ certifi==2022.9.24 ; python_version >= "3.9" and python_version < "4"
 charset-normalizer==2.1.1 ; python_version >= "3.9" and python_version < "4"
 gps==3.19 ; python_version >= "3.9" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.9" and python_version < "4"
+numpy==1.23.5 ; python_version < "4.0" and python_version >= "3.9"
+opencv-python==4.6.0.66 ; python_version >= "3.9" and python_version < "4.0"
 requests==2.28.1 ; python_version >= "3.9" and python_version < "4"
 urllib3==1.26.13 ; python_version >= "3.9" and python_version < "4"
